--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Journal"
+title: "Assignment"
 output:
   html_document:
     toc: true
@@ -13,116 +13,127 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
+# Assignment 1
 
-IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing.
+**Collaborators: Lorem Ipsum. **
+
+This assignment is due on Canvas on Monday 9/20 before class, at 10:15 am. Include the name of anyone with whom you collaborated at the top of the assignment.
 
 
-This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
+### Problem 1 
 
-# My first post
-
-2018 | 7 | 23 Last compiled: `r Sys.Date()`
-
-Notice that whatever you define as a top level header, automatically gets put into the table of contents bar on the left. 
-
-## Second level header
-
-You can add more headers by adding more hashtags. These won't be put into the table of contents
-
-### third level header
-
-Here's an even lower level header
-
-# My second post (note the order)
-
-2018 | 7 | 23 Last compiled: `r Sys.Date()`
-
-I'm writing this tutorial going from the top down. And, this is how it will be printed. So, notice the second post is second in the list. If you want your most recent post to be at the top, then make a new post starting at the top. If you want the oldest first, do, then keep adding to the bottom
-
-# Adding R stuff
-
-So far this is just a blog where you can write in plain text and serve your writing to a webpage. One of the main purposes of this lab journal is to record your progress learning R. The reason I am asking you to use this process is because you can both make a website, and a lab journal, and learn R all in R-studio. This makes everything really convenient and in the sam place. 
-
-So, let's say you are learning how to make a histogram in R. For example, maybe you want to sample 100 numbers from a normal distribution with mean = 0, and standard deviation =1, and then you want to plot a histogram. You can do this right here by using an r code block, like this:
+Install the datasets package on the console below using `install.packages("datasets")`. Now load the library.
 
 ```{r}
-samples <- rnorm(100, mean=0, sd=1)
-hist(samples)
+#install.packages("datasets")
+library(datasets)
 ```
+_Answer_: Line51 install the package(I#it out because it only need to be done once). Line52 load the library.
 
-When you knit this R Markdown document, you will see that the histogram is printed to the page, along with the R code. This document can be set up to hide the R code in the webpage, just delete the comment (hashtag), from the cold folding option in the yaml header up top. For purposes of letting yourself see the code, and me see the code, best to keep it the way that it is. You learn all of these things and more can be customized in each R code block.
-
-# The big idea
-
-Use this lab journal to record what you do in R. This way I will be able to see what you are doing and help you along the way. You will also be creating a repository of all the things you do. You can make posts about everything. Learning specific things in R (project unrelated), and doing things for the project that we will discuss at the beginning of the Fall semester. You can get started now by fiddling around with googling things, and trying stuff out in R. I've placed some helpful starting links in the links page on this website
-
-# What can you do right now by yourself?
-
-It's hard to learn programming when you don't have specific problems that you are trying to solve. Everything just seems abstract.
-
-I wrote an [introductory programming book that introduces R](https://crumplab.github.io/programmingforpsych/), and gives some [concrete problems for you to solve](https://crumplab.github.io/programmingforpsych/programming-challenges-i-learning-the-fundamentals.html). 
-
-To get the hang of journaling and solving the problems to learn programming, my suggestion is that you use this .Rmd file to solve the problems. It would look like this:
-
-# Problem 1
-
-Do simple math with numbers, addition, subtraction, multiplication, division
+Load the USArrests dataset and rename it `dat`. Note that this dataset comes with R, in the package datasets, so there's no need to load data from your computer. Why is it useful to rename the dataset?
 
 ```{r}
-1+2
-2*5
-5/3
-(1+6+4)/5
-
+# This line load the USArrests dataset and rename it `dat`
+dat <- USArrests
 ```
 
-# Problem 2
+_Answer_: It is important to rename the dataset for the following reasons: 1. It save time typing a long name. 2. It avoid contaminating the data so that the data is replicable.
 
-Put numbers into variables, do simple math on the variables
+### Problem 2
+
+Use this command to make the state names into a new variable called State. 
+
+```{r, eval=FALSE}
+dat$state <- tolower(rownames(USArrests))
+```
+
+This dataset has the state names as row names, so we just want to make them into a new variable. We also make them all lower case, because that will help us draw a map later - the map function requires the states to be lower case.
+
+
+List the variables contained in the dataset `USArrests`.
 
 ```{r}
-a<-1
-b<-2
-a+b
-
-d<-c(1,2,3)
-e<-c(5,6,7)
-d+e
-d*e
-d/e
-
+# I think both of them work as they produce the same results but with different sequences.
+names(dat)
+ls(dat)
 ```
 
-# Problem 3
+Answer: "Assault", "Murder", "Rape", "state", and "UrbanPop". 
 
-Write code that will place the numbers 1 to 100 separately into a variable using for loop. Then, again using the seq function.
+### Problem 3 
+
+What type of variable (from the DVB chapter) is `Murder`? 
+
+Answer: Categorical variable
+
+What R Type of variable is it?
+
+Answer: Numeric(as indicated in the Format part of the description of the dataset)
+
+
+### Problem 4
+
+What information is contained in this dataset, in general? What do the numbers mean? 
+
+Answer: The dataset contains the statistic of the violent crime rate of 3 different kinds of crime in the 50 US States in 1973. It also contains the percentage of urban population in these states. The number means the number of arrests per 100000 people for murder, rape, and assault. The number also means percentage urban population for UrbanPop.
+
+### Problem 5 
+
+Draw a histogram of `Murder` with proper labels and title.
 
 ```{r}
-# for loop solution
-# i becomes the number 1 to 100 at each step of the loop
-
-
-a <- length(100) # make empty variable, set length to 100
-for (i in 1:100){
-  a[i] <-i #assigns the number in i, to the ith index of a
-}
-
-print(a)
-
-# for loop solution #2
-
-a<-c() #create empty variable using combine command
-for (i in 1:100){
-  a<-c(a,i) # keeps combining a with itself and the new number in i
-}
-print(a)
-
-# seq solution
-a <- seq(1,100,1) # look up help for seq using ?seq() in console
-print(a)
-
+hist(dat$Murder, main="US Murder", xlab="States", ylab="Murder/100000 residents")
 ```
 
-# Replace this with problem 4
+### Problem 6
 
-And keep going. Try to solve the problems with different scripts that provide the same solution. Good luck, Happy coding.
+Please summarize `Murder` quantitatively. What are its mean and median? What is the difference between mean and median? What is a quartile, and why do you think R gives you the 1st Qu. and 3rd Qu.?
+
+```{r}
+summary(dat$Murder)
+```
+
+Answer: The Mean is 7.788 and the Medium 7.250. THe difference between mean and median is 0.538. A quartile is one of the four parts that the data is divided into, and ithe data must be arranged from smallest to largest. R give me 1st Qu. and 3rd Qu. becasue it provides me information of the distribution and the shape of the data.
+
+### Problem 7
+
+Repeat the same steps you followed for `Murder`, for the variables `Assault` and `Rape`. Now plot all three histograms toghether. You can do this by using the command `par(mfrow=c(3,1))` and then plotting each of the three. 
+
+```{r, echo = TRUE, fig.width = 5, fig.height = 8}
+par(mfrow=c(3,1))
+hist(dat$Murder, main="US Murder", xlab="Murder/100000 residents", ylab="States")
+
+hist(dat$Assault, main="US Assault", xlab="Assault/100000 residents", ylab="States")
+
+hist(dat$Rape, main="US Rape", xlab="Rape/100000 residents", ylab="States")
+```
+
+What does the command par do, in your own words (you can look this up by asking R `?par`)?
+
+Answer: The Command par set the graphical parameters for the histogram that I just plotted. It set the graph to be draw in a three row and one column setting.
+
+What can you learn from plotting the histograms together?
+
+Answer:We can compare the shape of the histograms to find the difference of the overall trend. We can also compare the max and min more visually. We can also have a direct representation that is more clear than a chart with numbers.
+
+### Problem 8
+
+In the console below (not in text), type `install.packages("maps")` and press Enter, and then type `install.packages("ggplot2")` and press Enter. This will install the packages so you can load the libraries.
+
+Run this code:
+
+```{r, eval = FALSE, fig.width = 7.5, fig.height = 4}
+#install.packages("maps")
+#install.packages("ggplot2")
+library('maps') 
+library('ggplot2') 
+
+ggplot(dat, aes(map_id=state, fill=Murder)) + 
+  geom_map(map=map_data("state")) + 
+  expand_limits(x=map_data("state")$long, y=map_data("state")$lat)
+```
+
+What does this code do? Explain what each line is doing.
+
+Answer: The first line construct an aesthetic mapping from the dataset "dat" with the map id being state and each state is filled with the data "Murder".The second assign map data of variable "state" to the annotation of geom_map. The next two lines expand the plot's limit using the data from the variable "state" for its x and y axis.
+$$\\[2in]$$
