--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -43,7 +43,7 @@ _Answer_: It is important to rename the dataset for the following reasons: 1. It
 
 Use this command to make the state names into a new variable called State. 
 
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 dat$state <- tolower(rownames(USArrests))
 ```
 
@@ -122,7 +122,7 @@ In the console below (not in text), type `install.packages("maps")` and press En
 
 Run this code:
 
-```{r, eval = FALSE, fig.width = 7.5, fig.height = 4}
+```{r, eval = TRUE, fig.width = 7.5, fig.height = 4}
 #install.packages("maps")
 #install.packages("ggplot2")
 library('maps') 
