--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -277,4 +277,148 @@ ggplot(data=dat, aes(x=speakengl))+
 ```
 
 Answer: There are more English speaking males than females.
+
+# Exam 1
+
+## Instructions
+
+a. Create a folder in your computer (a good place would be under Crim 250, Exams). 
+
+b. Download the dataset from the Canvas website (fatal-police-shootings-data.csv) onto that folder, and save your Exam 1.Rmd file in the same folder.
+
+c. Download the README.md file. This is the codebook. 
+
+d. Load the data into an R data frame.
+```{r}
+library(readr)
+fatal_police_shootings_data <- read_csv("C:/Users/Gluttonous Kangaroo/Desktop/Penn Works/CRIM 250/Exam/fatal-police-shootings-data.csv")
+dat <- fatal_police_shootings_data
+```
+
+
+### Problem 1 (10 points)
+
+a. Describe the dataset. This is the source: https://github.com/washingtonpost/data-police-shootings . Write two sentences (max.) about this.
+
+Answer: This is a dataset by Washington Post which contains records of every fatal shooting in the United States by a police officer who is in the line of duty since Jan. 1, 2015. 
+
+b. How many observations are there in the data frame?
+```{r}
+#Look at the dat data frame on the right under the option of Environment.
+```
+
+Answer: There are 6594 observations in the dataframe
+
+c. Look at the names of the variables in the data frame. Describe what "body_camera", "flee", and "armed" represent, according to the codebook. Again, only write one sentence (max) per variable.
+```{r}
+summary(dat)
+```
+
+Answer: body_camera is a categorical and logical variable that represent whether the police wear a body camera in that observation. flee is a categorical and character variable that represent whether the victim was moving away from the officer(if the victim flee, it can be done in the means of foot or car). Armed is a categorical and character varialbe that represent whether the victim equipped some level of arm that could inflict harm(status can be armed(with indication of weapons)/undetermined/unknown/unarmed)
+
+d. What are three weapons that you are surprised to find in the "armed" variable? Make a table of the values in "armed" to see the options.
+```{r}
+tab.arm <-table(dat$armed)
+```
+
+Answer: Air conditioner, microphone, and fire work are suprising for me to see that can be used as weapon. I think either the victims were very creative or the police officers were making misjudgements.
+
+### Problem 2 (10 points)
+
+a. Describe the age distribution of the sample. Is this what you would expect to see?
+```{r}
+hist(dat$age,xlab="age", ylab="counts", xlim=c(0,100))
+```
+
+Answer: The distribution is strongly skewed to the right with one mode around age 30. This means that a large portion of the victims are adults in their mid ages. This is what I am expected to see because the police officers are more likely to see the mid age adults as potential dangers rather than children or old people.
+
+b. To understand the center of the age distribution, would you use a mean or a median, and why? Find the one you picked.
+```{r}
+#Look at the age variable in summary(dat).
+summary(dat)
+```
+
+Answer: I would choose median instead of the mean mainly because there are extreme values from both side(A min for age of 6 and a max for age of 91) that can influence the distribution. Median is resistant to extreme values which is a better choice in this case. The median of age is 35.
+
+c. Describe the gender distribution of the sample. Do you find this surprising?
+```{r}
+tab.gender <- table(dat$gender)
+barplot(tab.gender,xlab="gender", ylab="counts")
+```
+
+Answer: The gender distribution overwhelmingly unbalanced with the vast majority of the victim being males than females. In fact, the male victims are 20 times more than the female victims. I don't find this surprising because it is reasonable for a police officer to find a male with higher potential danger than a female.
+
+### Problem 3 (10 points)
+
+a. How many police officers had a body camera, according to news reports? What proportion is this of all the incidents in the data? Are you surprised that it is so high or low?
+
+```{r}
+tab.bodycamera <- table(dat$body_camera)
+barplot(tab.bodycamera,xlab="bodycamera", ylab="counts")
+```
+
+Answer: 910 police officers had a body camera. However, it is only 910/6594=13.8% of all observations. I am not surprised that the body camera rate is so low because implementing a body camera for every officer can be costly, so some underfunded police apartments which located in more poor or chaotic areas (probably more shooting incidents) might not equip their officers to save money.
+
+b. In  how many of the incidents was the victim fleeing? What proportion is this of the total number of incidents in the data? Is this what you would expect?
+```{r}
+tab.flee <- table(dat$flee)
+barplot(tab.flee,xlab="flee", ylab="counts")
+```
+
+Answer:1058 of the victims flee on foot and 845 of the victims flee on car, which is 1903/6594=28.9% of the observations. This is unexpected because fleeing is usually involved with a chase and the whole process accelerate the tension of the situation. More tension is very likely to be a cause for more fatal shooting, so I am surprised by the fact that less than 30% of the victims did flee. However, in order to get the holistic picture, we must combine the variable threat level into the consideration.
+
+### Problem 4 (10 points) -  Answer only one of these (a or b).
+
+a. Describe the relationship between the variables "body camera" and "flee" using a stacked barplot. What can you conclude from this relationship? 
+
+*Hint 1: The categories along the x-axis are the options for "flee", each bar contains information about whether the police officer had a body camera (vertically), and the height along the y-axis shows the frequency of that category).*
+
+*Hint 2: Also, if you are unsure about the syntax for barplot, run ?barplot in R and see some examples at the bottom of the documentation. This is usually a good way to look up the syntax of R code. You can also Google it.*
+
+
+```{r}
+
+```
+
+__Your answer here.__
+
+b. Describe the relationship between age and race by using a boxplot. What can you conclude from this relationship? 
+
+*Hint 1: The categories along the x-axis are the race categories and the height along the y-axis is age.* 
+
+*Hint 2: Also, if you are unsure about the syntax for boxplot, run ?boxplot in R and see some examples at the bottom of the documentation. This is usually a good way to look up the syntax of R code. You can also Google it.*
+
+
+```{r}
+plot(factor(dat$race), dat$age, ylab="age", xlab="Race", names=c("Asian","Black","Hispanic","Native A","Other","White"))
+```
+
+Answer: There is no straightforward correlation between age and race. However, it seems that the White victims have more spread than all the minority group victims. This means that there are White victims from all ages being shot. On the other hand, the minority groups victims are younger and more concentrated(they have less inter-quartile range and a smaller median). Also, there are many outliers of the White victims that are very old.
+
+
+
+
+
+
+### Extra credit (10 points)
+
+a. What does this code tell us? 
+
+```{r, eval=FALSE}
+mydates <- as.Date(dat$date)
+head(mydates)
+(mydates[length(mydates)] - mydates[1])
+```
+
+Answer: This code tell us the time difference of 2458 days. It tells us the length of the list that is given by date.
+
+
+b. On Friday, a new report was published that was described as follows by The Guardian: "More than half of US police killings are mislabelled or not reported, study finds." Without reading this article now (due to limited time), why do you think police killings might be mislabelled or underreported?
+
+Answer: One of the key reason is that underreport can avoild the public's focus on police brutality which give the police department less pressure.
+
+c. Regarding missing values in problem 4, do you see any? If so, do you think that's all that's missing from the data?
+
+Answer: Yes there are missing values. I don't think that is all missing from the data because some of the data might not even be reported in the dataset.
+
 $$\\[2in]$$
