--- a/CRIM250 Assignment.Rmd
+++ b/CRIM250 Assignment.Rmd
@@ -421,4 +421,198 @@ c. Regarding missing values in problem 4, do you see any? If so, do you think th
 
 Answer: Yes there are missing values. I don't think that is all missing from the data because some of the data might not even be reported in the dataset.
 
+# Assignment 3
+
+**Collaborators:N/A **.
+
+This assignment is due on Canvas on Wednesday 10/27/2021 before class, at 10:15 am. Include the name of anyone with whom you collaborated at the top of the assignment.
+
+Submit your responses as either an HTML file or a PDF file on Canvas. Also, please upload it to your website.
+
+Save the file (found on Canvas) crime_simple.txt to the same folder as this file (your Rmd file for Assignment 3).
+
+Load the data.
+```{r}
+library(readr)
+library(knitr)
+dat.crime <- read_delim("crime_simple.txt", delim = "\t")
+```
+
+This is a dataset from a textbook by Brian S. Everitt about crime in the US in 1960. The data originate from the Uniform Crime Report of the FBI and other government sources. The data for 47 states of the USA are given. 
+
+Here is the codebook:
+
+R: Crime rate: # of offenses reported to police per million population
+
+Age: The number of males of age 14-24 per 1000 population
+
+S: Indicator variable for Southern states (0 = No, 1 = Yes)
+
+Ed: Mean of years of schooling x 10 for persons of age 25 or older
+
+Ex0: 1960 per capita expenditure on police by state and local government
+
+Ex1: 1959 per capita expenditure on police by state and local government
+
+LF: Labor force participation rate per 1000 civilian urban males age 14-24
+
+M: The number of males per 1000 females
+
+N: State population size in hundred thousands
+
+NW: The number of non-whites per 1000 population
+
+U1: Unemployment rate of urban males per 1000 of age 14-24
+
+U2: Unemployment rate of urban males per 1000 of age 35-39
+
+W: Median value of transferable goods and assets or family income in tens of $
+
+X: The number of families per 1000 earning below 1/2 the median income
+
+
+We are interested in checking whether the reported crime rate (# of offenses reported to police per million population) and the average education (mean number of years of schooling for persons of age 25 or older) are related. 
+
+
+### Problem 1
+
+How many observations are there in the dataset? To what does each observation correspond?
+
+```{r}
+#Look at the data table showing on the left#
+```
+
+Answer: There are 47 observations. Each observation correspond to the data related to crimes of 14 different variable of a certain state
+
+### Problem 2
+
+Draw a scatterplot of the two variables. Calculate the correlation between the two variables. Can you come up with an explanation for this relationship?
+
+```{r, fig.width=6, fig.height=4}
+plot(dat.crime$R, dat.crime$Ed,  main="Reported crime rate vs. education level in states",
+    xlab="Education level", ylab="Reported crime rate")
+
+cor(dat.crime$R, dat.crime$Ed)
+
+```
+
+Answer: The correlation is calculated to be 0.3228349. It is a positive correlation, which means the states with higher education level tend to be richer and have larger metropolitan areas. In these places, there tends to be more police patrolling in these areas and could result in more crime reporting. In lower educated states, there might be less polices which resulted in low reporting. The correlation is low, which might be a result impacted by unknown confounding variables that is not considered in this dataset.
+
+
+### Problem 3
+
+Regress reported crime rate (y) on average education (x) and call this linear model `crime.lm` and write the summary of the regression by using this code, which makes it look a little nicer.
+
+```{r} 
+crime.lm <- lm(formula = R ~ Ed, data = dat.crime)
+summary(crime.lm)
+```
+
+Answer: the summary is demonstrated above.
+
+### Problem 4 
+Are the four assumptions of linear regression satisfied? To answer this, draw the relevant plots. (Write a maximum of one sentence per assumption.)
+
+```{r} 
+plot(dat.crime$Ed, crime.lm$residuals, main="Residuals vs. x", xlab="x, Education level", ylab="Residuals")
+abline(h = 0, lty="dashed")
+plot(crime.lm)
+```
+
+Answer: Linearity assumption is satisfied because there is no pattern observed in the residual vs. fitted plot and the line seems straight enough. The Independence assumption is satisfied because there seems to be no unique pattern in the residual vs. x plot. The homoscedasticity assumption is met because in the scale location plot, there is no significant pattern of the red line. The normal population assumption is met because in residual vs. leverage, all values are within cook distance of 0.5, and in Normal Q-Q plot, the data fitted well enough throughout the line despite some variance in both ends.
+
+### Problem 5
+
+Is the relationship between reported crime and average education statistically significant? Report the estimated coefficient of the slope, the standard error, and the p-value. What does it mean for the relationship to be statistically significant?
+
+Answer: The slope is 1.1161, the standard error is 0.4878, and the p value 0.0269. When the relationship is statistically significant, it is very unlikely for it to be occurred by chance. Since 0.0269 is less than 0.05, it is statistically significant.
+
+### Problem 6
+
+How are reported crime and average education related? In other words, for every unit increase in average education, how does reported crime rate change (per million) per state?
+
+Answer: The reported crime and average education is positively correlated. With the data having been observed, for every unit increase in average education, there is a increase of 1.1161 in reported crime rate with a p-value 0.0269. 
+
+### Problem 7
+
+Can you conclude that if individuals were to receive more education, then crime will be reported more often? Why or why not?
+
+Answer: No we cannot conclude that. Although the data is strongly correlated with a p value of 0.0269, which means we reject the null that education level and reported crime rate has no relationship, we cannot prove causation from correlation. These data are not generated with random procedure in experiment, thus we cannot conclude the causation given by the question.
+
+# Exam 2
+
+
+## Instructions
+
+a. Create a folder in your computer (a good place would be under Crim 250, Exams). 
+
+b. Download the dataset from the Canvas website (sim.data.csv) onto that folder, and save your Exam 2.Rmd file in the same folder.
+
+c. Data description: This dataset provides (simulated) data about 200 police departments in one year. It contains information about the funding received by the department as well as incidents of police brutality. Suppose this dataset (sim.data.csv) was collected by researchers to answer this question: **"Does having more funding in a police department lead to fewer incidents of police brutality?"**
+d. Codebook:
+- funds: How much funding the police department received in that year in millions of dollars.
+- po.brut: How many incidents of police brutality were reported by the department that year.
+- po.dept.code: Police department code
+
+### Problem 1: EDA (10 points) 
+
+Describe the dataset and variables. Perform exploratory data analysis for the two variables of interest: funds and po.brut.
+
+```{r}
+library(readr)
+sim_data <- read_csv("C:/Users/Gluttonous Kangaroo/Desktop/Penn Works/CRIM 250/Exam/Exam 2/sim.data.csv")
+dat <- read.csv(file = 'sim.data.csv')
+summary(dat)
+hist(dat$funds, main="Funds", xlab="Funds in millions of $", ylab="Frequency")
+hist(dat$po.brut, main="Police Brutality", xlab="Police Brutality Incidents", ylab="Frequency")
+plot(dat$funds, dat$po.brut, xlab="Funds(in millions of $)", ylab="Police Brutality")
+```
+
+Answer: This dataset is a dataset that contain 200 observations of three variables.The variable funds has a mean of 61.04 and a median of 59.75. The variable po.brut has a mean of 18.14 and a median of 19.00. Since difference between the mean and the median is small, both variables are not greatly affected by extreme values. From the Histograms plotted, we can see that the funds distribution among the police department is unimodaland approximately normal with a peak at 50-60 millions of dollars. We can also see that the distribution of police brutality incidents is bimodal and skewed to the left with two peaks at 15-20 and 20-25. From the scatter plot, given the data, the police brutality seem to be decreasing in a concave down matter as the the funds of police departments increase.
+
+
+### Problem 2: Linear regression (30 points)
+
+a. Perform a simple linear regression to answer the question of interest. To do this, name your linear model "reg.output" and write the summary of the regression by using "summary(reg.output)". 
+
+```{r}
+reg.output <- lm(formula = po.brut ~ funds, data = dat)
+summary(reg.output)
+```
+
+Answer: The summary is shown above.
+
+b. Report the estimated coefficient, standard error, and p-value of the slope. Is the relationship between funds and incidents statistically significant? Explain.
+
+Answer: The estimated coefficient is -0.367099, the standard error is 0.04496, and the p-value is less than 2e-16. 
+
+c. Draw a scatterplot of po.brut (y-axis) and funds (x-axis). Right below your plot command, use abline to draw the fitted regression line, like this:
+```{r, fig.width=4, fig.height=4}
+plot(dat$funds, dat$po.brut, xlab="Funds(in millions of $)", ylab="Police Brutality")
+abline(reg.output, col = "red", lwd=2)
+```
+Does the line look like a good fit? Why or why not?
+
+Answer: The line looks like a good fit because the pattern of the dots are decreasing for approximately the same slope as predicted by the fitted regression line for the majority of time. We can observe that there is a deviation from the fitted regression line from the two tails of the data, and the fact that both tails deviate to the same direction is concerning since that might be an indicator of a different relationship. However, without further analysis, the fitted line seems to be good because the deviation is small at the tails.
+
+d. Are the four assumptions of linear regression satisfied? To answer this, draw the relevant plots. (Write a maximum of one sentence per assumption.) If not, what might you try to do to improve this (if you had more time)?
+```{r}
+plot(dat$funds, reg.output$residuals, main="Residuals vs. x", xlab="x, funds", ylab="Residuals")
+abline(h = 0, lty="dashed")
+plot(reg.output)
+```
+
+
+Answer: The Linearity assumption is not satisfied because there is a pattern observed in the residual vs. fitted plot and the line seems to be obviously concave down, stating the relationship might not be linear. The Independence assumption is not satisfied because there seems to be a pattern in the residual vs. x plot which is an obvious concave down curve, stating the data might not be independent, but it could also be due to the fitting of a bad model. The homoscedasticity assumption is not met because in the scale location plot, there is a significant pattern of the red line that is concave up curve, which means we cannot assume that the data have equal variance. The normal population assumption is barely met because in residual vs. leverage, all values are within cook distance of 0.5 and fitted the line quite well, but in Normal Q-Q plot, the data fitted not well throughout the line with a lot of variance in one end but not the other. The change can be made in transforming the data to log or exponential functions given there is a concavity in data.
+
+e. Answer the question of interest based on your analysis.
+
+Answer: We are very confident that there is a strong association between the increasing of funding and the decreasing of police brutality incidents. However, since we have no available information of how the data is collected, especially it is not collected in experiment with parameters given, so it is hard for us to assert causality for this instance. It is potentially possible that a third variable like a policy implemented that could cause the change in both variables.
+
+### Problem 3: Data ethics (10 points)
+
+Describe the dataset. Considering our lecture on data ethics, what concerns do you have about the dataset? Once you perform your analysis to answer the question of interest using this dataset, what concerns might you have about the results?
+
+Answer: The dataset include Police Department Code, which can be used to track specific police department. Even if the code is not traceable for normal citizens, this is still sensitive information if people hacked into the system and decide to attack certain police departments with higher brutality incidents, which is a violation of confidentiality  principle of data ethic. The results is also concerning since the data is collected by researchers with no further information given, which means it doesn't provide enough transparency of how the data is collected, and there is a concern of fairness of whether there is biases given the data is clearly indicating a position.
+
 $$\\[2in]$$
