--- a/CRIM250 Assignment.Rmd
+++ b/CRIM250 Assignment.Rmd
@@ -615,16 +615,18 @@ Describe the dataset. Considering our lecture on data ethics, what concerns do y
 
 Answer: The dataset include Police Department Code, which can be used to track specific police department. Even if the code is not traceable for normal citizens, this is still sensitive information if people hacked into the system and decide to attack certain police departments with higher brutality incidents, which is a violation of confidentiality  principle of data ethic. The results is also concerning since the data is collected by researchers with no further information given, which means it doesn't provide enough transparency of how the data is collected, and there is a concern of fairness of whether there is biases given the data is clearly indicating a position.
 
-#ggplot Exercise
+# Assignment 4
 
-##Install ggplot
+Exercise drawn from "R for Data Science", Chapter 3 and 28=
+
+## Install ggplot
 
 ```{r}
 #install.packages("tidyverse")#
 library(tidyverse)
 ```
 
-###Exercise 3.2.4
+### Exercise 3.2.4
 ```{r}
 ggplot(data = mpg)
 ```
@@ -667,7 +669,7 @@ ggplot(data = mpg) +
 
 Answer: Result is shown above. The scatterplot is not useful mainly because class is a categorical variable. 
 
-###Exercise 3.3.1
+### Exercise 3.3.1
 
 1. What’s gone wrong with this code? Why are the points not blue?
 
@@ -720,7 +722,7 @@ ggplot(data = mpg) +
 
 Answer: It will be shown as True/False value as shown above.
 
-###Exercise 3.5.1
+### Exercise 3.5.1
 
 1. What happens if you facet on a continuous variable?
 
@@ -781,7 +783,7 @@ Answer: nrow and ncol set up the number of rows and columns. Scales also control
 
 Answer: Because in that case the plot can be read easier by the audience.
 
-###Exercise 3.6.1
+### Exercise 3.6.1
 
 1. What geom would you use to draw a line chart? A boxplot? A histogram? An area chart?
 
@@ -850,7 +852,7 @@ ggplot() +
 
 Answer: See plot above. 
 
-###Exercise 3.7.1
+### Exercise 3.7.1
 
 1. What is the default geom associated with stat_summary()? How could you rewrite the previous plot to use that geom function instead of the stat function?
 
@@ -890,7 +892,7 @@ ggplot(data = diamonds) +
 
 Answer: We cannot observe any pattern due to the poor setup.
 
-###Exercise 3.8.1
+### Exercise 3.8.1
 
 1. What is the problem with this plot? How could you improve it?
 
@@ -926,7 +928,7 @@ ggplot(data = mpg) +
 
 Answer: As demonstrated, geom_box use dodge2 as default position.
 
-###Exercise 3.9.1
+### Exercise 3.9.1
 
 1. Turn a stacked bar chart into a pie chart using coord_polar().
 
